@@ -2,13 +2,14 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2006 OTRS GmbH, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.323.2.1 2006-12-13 17:13:51 martin Exp $
+# $Id: CHANGES,v 1.323.2.2 2006-12-14 12:31:45 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
 # did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
 # --
 2.1.5 (????/??/??)
+ - (2006/12/14) fixed not working Kernel/System/DB/db2.pm (syntax error)
 
 2.1.4 (2006/12/13)
  - (2006/12/13) fixed not working free time selection in AgentTicketClose,
